2003-11-24  Kevin Greiner <kgreiner@xpediantsolutions.com>
	* gnus-srvr.el (gnus-server-insert-server-line): The server names
	used in gnus-agent are different (for example, the native server
	uses the alias "native") from the names in gnus-srvr.
	Compensating by adding a second text property storing the name
	expected by gnus-agent.
	(gnus-server-named-server): New function.
	* gnus-agent.el (gnus-agent-remove-server, gnus-agent-add-server):
	No longer expect an argument as it was ignored anyway.  Uses the
	new gnus-server-named-server function to get gnus-agent compatible
	names from the server buffer.

2003-11-20  Kevin Greiner <kgreiner@xpediantsolutions.com>

	* gnus.el (gnus-agent-covered-methods): Documented use of
	named servers, not methods, to identity agentized groups.
	Users may now change their server configurations without having
	the server become "unagentized".
	(gnus-agent-covered-methods): Removed from gnus-variable-list to
	avoid storing two copies of gnus-agent-covered-methods, one in
	.newsrc.eld and the other in agent/lib/servers.
	(gnus-server-to-method): Do not cache server for the nil method.
	(gnus-method-to-server): New function.  Associate named server
	with all, even foreign, methods.
	(gnus-agent-method-p, gnus-agent-method-p-cache): Incorporated
	simple last-response cache to offset performance lose of having to
	always convert methods to named servers.
	* gnus-agent.el (gnus-agent-expire-days): Removed obsolete
	documentation.
	(gnus-agentize, gnus-agent-add-server, gnus-agent-remove-server):
	Modified to support new definition of gnus-agent-covered-method.
	(gnus-agent-read-servers): Rewritten to convert old method data
	into server names.
	(gnus-agent-read-servers-validate)
	(gnus-agent-read-servers-validate-native): New functions.
	(gnus-agent-write-servers): No longer use gnus-method-simplify as
	it failed to simplify foreign methods.
	(gnus-agent-close-connections, gnus-agent-synchronize-flags)