@@ -1,3 +1,7 @@
+2003-11-25  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* dgnushack.el (mapc): Add the compiler macro for Emacs 20.
+
 2003-11-24  Kevin Greiner <kgreiner@xpediantsolutions.com>
 	* gnus-srvr.el (gnus-server-insert-server-line): The server names
 	used in gnus-agent are different (for example, the native server
